SKY: paperview checkbox and task title alignment fix

--- a/bundles/lincko/app/public/styles/generic/skylist.css
+++ b/bundles/lincko/app/public/styles/generic/skylist.css
@@ -717,7 +717,8 @@
 }
 .skylist_wrapper[view=paper] .skylist_card [find=title]{
 	text-decoration: inherit;
-	display: inline-block;
+	/*display: inline-block;*/
+	display: block;
 	/*cursor: text;*/
 	cursor: pointer;
 	cursor: hand;
@@ -734,8 +735,9 @@
 }
 .skylist_wrapper[view=paper] .skylist_card_center [find=card_leftbox] {
 	vertical-align: top;
-	padding-top: 6px;
-	padding-bottom: 10px; /*for mobile*/
+	/*padding-top: 6px;*/
+	padding-top: 8px;
+	padding-bottom: 10px;
 }
 
 .skylist_wrapper[view=paper] .skylist_card .skylist_card_progress{
